# infinite-grid

./: LICENSE  README.md  infinite_grid.py  pyproject.toml  test_infinite_grid.py
src/infinitegrid/: __init__.py  infinitegrid.py
tests/: test_infinite_grid.py
