[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infinitegrid"
version = "0.1.2"
authors = [
    {name="Nathan Barloy"}
]
description = "An infinite grid object of any dimension"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/nathanBarloy/infinite-grid"
